[package]
name = "rust_quma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_quma"
crate-type = ["cdylib"]

[dependencies]
bio = "1.1.0"
ndarray = "0.15.6"
once_cell = "1.17.1"
pyo3 = "0.18.3"
regex = "1.8.2"
