[project]
name = "rust_quma"
authors = [{name = "Andrew J. Bonham", email = "bonham@gmail.com"}]
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
keywords = ["genomics", "methylation", "DNA sequencing"]

[project.urls]
Homepage = "https://github.com/Paradoxdruid/rust_quma"

[build-system]
requires = ["maturin>=0.15,<0.16"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
